Disabling webpage zoom on mobile and fixing browser zoom issues with the search menu.

--- a/src/stylesheets/MenuBar.scss
+++ b/src/stylesheets/MenuBar.scss
@@ -26,7 +26,7 @@
 .menu-icon {
     user-select: none;
     color: #767676;
-    width: auto;
+    max-width: 24px;
     padding: 8px;
     &:hover {
         color: #464646;
